Feat: Add team members and invitations (#13)
* Local version working

* Add octopus service

* Clean and fix users, gateway and victorinox

* Add working docker-compose envrionment

* Fix webapp with octopus service

* Fix exchange code

* Add onboarded field on organization

* Add notifications toaster

* Fix webpack reload

* Add invitations

* Fix invitations and add sendgrid

* Add sendgrid in local config

* Update .gitignore

* Fix merge conflicts
