# api/services/users/v1/responses.pb.go
@@ -225,6 +225,100 @@ func (x *WorkspaceResponse) GetWorkspace() *Workspace {
 	return nil
 }
 
+type InvitationResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Invitations *Invitation `protobuf:"bytes,1,opt,name=invitations,proto3" json:"invitations,omitempty"`
+}
+
+func (x *InvitationResponse) Reset() {
+	*x = InvitationResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_services_users_v1_responses_proto_msgTypes[4]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *InvitationResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*InvitationResponse) ProtoMessage() {}
+
+func (x *InvitationResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_services_users_v1_responses_proto_msgTypes[4]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use InvitationResponse.ProtoReflect.Descriptor instead.
+func (*InvitationResponse) Descriptor() ([]byte, []int) {
+	return file_services_users_v1_responses_proto_rawDescGZIP(), []int{4}
+}
+
+func (x *InvitationResponse) GetInvitations() *Invitation {
+	if x != nil {
+		return x.Invitations
+	}
+	return nil
+}
+
+type InvitationListResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Invitations []*Invitation `protobuf:"bytes,1,rep,name=invitations,proto3" json:"invitations,omitempty"`
+}
+
+func (x *InvitationListResponse) Reset() {
+	*x = InvitationListResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_services_users_v1_responses_proto_msgTypes[5]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *InvitationListResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*InvitationListResponse) ProtoMessage() {}
+
+func (x *InvitationListResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_services_users_v1_responses_proto_msgTypes[5]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use InvitationListResponse.ProtoReflect.Descriptor instead.
+func (*InvitationListResponse) Descriptor() ([]byte, []int) {
+	return file_services_users_v1_responses_proto_rawDescGZIP(), []int{5}
+}
+
+func (x *InvitationListResponse) GetInvitations() []*Invitation {
+	if x != nil {
+		return x.Invitations
+	}
+	return nil
+}
+
 var File_services_users_v1_responses_proto protoreflect.FileDescriptor
 
 var file_services_users_v1_responses_proto_rawDesc = []byte{
@@ -254,11 +348,20 @@ var file_services_users_v1_responses_proto_rawDesc = []byte{
 	0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x2b, 0x0a, 0x09, 0x77, 0x6f, 0x72,
 	0x6b, 0x73, 0x70, 0x61, 0x63, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x0d, 0x2e, 0x76,
 	0x31, 0x2e, 0x57, 0x6f, 0x72, 0x6b, 0x73, 0x70, 0x61, 0x63, 0x65, 0x52, 0x09, 0x77, 0x6f, 0x72,
-	0x6b, 0x73, 0x70, 0x61, 0x63, 0x65, 0x42, 0x38, 0x5a, 0x36, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62,
-	0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x62, 0x75, 0x74, 0x6c, 0x65, 0x72, 0x68, 0x71, 0x2f, 0x62, 0x75,
-	0x74, 0x6c, 0x65, 0x72, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65,
-	0x73, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x73, 0x2f, 0x76, 0x31, 0x3b, 0x75, 0x73, 0x65, 0x72, 0x73,
-	0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x6b, 0x73, 0x70, 0x61, 0x63, 0x65, 0x22, 0x46, 0x0a, 0x12, 0x49, 0x6e, 0x76, 0x69, 0x74, 0x61,
+	0x74, 0x69, 0x6f, 0x6e, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x30, 0x0a, 0x0b,
+	0x69, 0x6e, 0x76, 0x69, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x18, 0x01, 0x20, 0x01, 0x28,
+	0x0b, 0x32, 0x0e, 0x2e, 0x76, 0x31, 0x2e, 0x49, 0x6e, 0x76, 0x69, 0x74, 0x61, 0x74, 0x69, 0x6f,
+	0x6e, 0x52, 0x0b, 0x69, 0x6e, 0x76, 0x69, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x22, 0x4a,
+	0x0a, 0x16, 0x49, 0x6e, 0x76, 0x69, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x4c, 0x69, 0x73, 0x74,
+	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x30, 0x0a, 0x0b, 0x69, 0x6e, 0x76, 0x69,
+	0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x0e, 0x2e,
+	0x76, 0x31, 0x2e, 0x49, 0x6e, 0x76, 0x69, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x52, 0x0b, 0x69,
+	0x6e, 0x76, 0x69, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x42, 0x38, 0x5a, 0x36, 0x67, 0x69,
+	0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x62, 0x75, 0x74, 0x6c, 0x65, 0x72, 0x68,
+	0x71, 0x2f, 0x62, 0x75, 0x74, 0x6c, 0x65, 0x72, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x73, 0x65, 0x72,
+	0x76, 0x69, 0x63, 0x65, 0x73, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x73, 0x2f, 0x76, 0x31, 0x3b, 0x75,
+	0x73, 0x65, 0x72, 0x73, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -273,26 +376,31 @@ func file_services_users_v1_responses_proto_rawDescGZIP() []byte {
 	return file_services_users_v1_responses_proto_rawDescData
 }
 
-var file_services_users_v1_responses_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
+var file_services_users_v1_responses_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
 var file_services_users_v1_responses_proto_goTypes = []interface{}{
 	(*AuthenticatedUser)(nil),        // 0: v1.AuthenticatedUser
 	(*OrganizationListResponse)(nil), // 1: v1.OrganizationListResponse
 	(*OrganizationResponse)(nil),     // 2: v1.OrganizationResponse
 	(*WorkspaceResponse)(nil),        // 3: v1.WorkspaceResponse
-	(*User)(nil),                     // 4: v1.User
-	(*Organization)(nil),             // 5: v1.Organization
-	(*Workspace)(nil),                // 6: v1.Workspace
+	(*InvitationResponse)(nil),       // 4: v1.InvitationResponse
+	(*InvitationListResponse)(nil),   // 5: v1.InvitationListResponse
+	(*User)(nil),                     // 6: v1.User
+	(*Organization)(nil),             // 7: v1.Organization
+	(*Workspace)(nil),                // 8: v1.Workspace
+	(*Invitation)(nil),               // 9: v1.Invitation
 }
 var file_services_users_v1_responses_proto_depIdxs = []int32{
-	4, // 0: v1.AuthenticatedUser.user:type_name -> v1.User
-	5, // 1: v1.OrganizationListResponse.organizations:type_name -> v1.Organization
-	5, // 2: v1.OrganizationResponse.organization:type_name -> v1.Organization
-	6, // 3: v1.WorkspaceResponse.workspace:type_name -> v1.Workspace
-	4, // [4:4] is the sub-list for method output_type
-	4, // [4:4] is the sub-list for method input_type
-	4, // [4:4] is the sub-list for extension type_name
-	4, // [4:4] is the sub-list for extension extendee
-	0, // [0:4] is the sub-list for field type_name
+	6, // 0: v1.AuthenticatedUser.user:type_name -> v1.User
+	7, // 1: v1.OrganizationListResponse.organizations:type_name -> v1.Organization
+	7, // 2: v1.OrganizationResponse.organization:type_name -> v1.Organization
+	8, // 3: v1.WorkspaceResponse.workspace:type_name -> v1.Workspace
+	9, // 4: v1.InvitationResponse.invitations:type_name -> v1.Invitation
+	9, // 5: v1.InvitationListResponse.invitations:type_name -> v1.Invitation
+	6, // [6:6] is the sub-list for method output_type
+	6, // [6:6] is the sub-list for method input_type
+	6, // [6:6] is the sub-list for extension type_name
+	6, // [6:6] is the sub-list for extension extendee
+	0, // [0:6] is the sub-list for field type_name
 }
 
 func init() { file_services_users_v1_responses_proto_init() }
@@ -350,6 +458,30 @@ func file_services_users_v1_responses_proto_init() {
 				return nil
 			}
 		}
+		file_services_users_v1_responses_proto_msgTypes[4].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*InvitationResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_services_users_v1_responses_proto_msgTypes[5].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*InvitationListResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -357,7 +489,7 @@ func file_services_users_v1_responses_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_services_users_v1_responses_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   4,
+			NumMessages:   6,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
